# stac-tools

./: .gitignore  LICENSE  README.md  setup.cfg
clients/: load_xarray.py  plot_sst_anomalies.py
configurations/: README.md  eocis-defaults.json  sst-climatology.json  sst.json
scripts/: sync.sh
src/eocis_stac_tools/api/: netcdf2stac.py  thumbnail.py
src/eocis_stac_tools/cli/: netcdf2stac.py  uploadstac.py
test/: serve.py  test_basic.py
test/configurations/: sm.json  sst.json
test/sm/data/2024/01/: EOCIS-SM-L4-WB-AFRICA-TAMSAT-20240101-fv2.3.0.nc  EOCIS-SM-L4-WB-AFRICA-TAMSAT-20240102-fv2.3.0.nc  EOCIS-SM-L4-WB-AFRICA-TAMSAT-20240103-fv2.3.0.nc  EOCIS-SM-L4-WB-AFRICA-TAMSAT-20240104-fv2.3.0.nc
test/sst/data/2022/01/01/: 20220101120000-C3S-L4_GHRSST-SSTdepth-OSTIA-GLOB_ICDR3.0-v02.0-fv01.0-subset.nc
