[metadata]
name = stac_tools
version = 0.0.3
author = Niall McCarroll
author_email = n.f.mccarroll@reading.ac.uk
description = Various utilities for creating STAC item records from EOCIS and other NetCDF4 datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eocis-portal/stac-tools
project_urls =
    Bug Tracker =  https://github.com/eocis-portal/stac-tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    netcdf2stac = eocis_stac_tools.cli.netcdf2stac:main
    uploadstac = eocis_stac_tools.cli.uploadstac:main

[options.packages.find]
where = src

